--- a/Friday.ERP.Client/Pages/Dashboard/Index.razor
+++ b/Friday.ERP.Client/Pages/Dashboard/Index.razor
@@ -1,5 +1,4 @@
 ﻿@page "/"
-
 @using Friday.ERP.Shared.DataTransferObjects
 @using Friday.ERP.Client.Data
 @using Friday.ERP.Client.Pages.Dashboard.Components.Molecules
@@ -31,8 +30,9 @@
                 <ChildContent>
                     @if (_hasSummaryData)
                     {
-                        <MudChart 
-                            ChartType="ChartType.Bar" ChartSeries="@_series" @bind-SelectedIndex="_index" XAxisLabels="@_xAxisLabels" Width="100%"></MudChart>
+                        <MudChart
+                            ChartType="ChartType.Bar" ChartSeries="@_series" @bind-SelectedIndex="_index" XAxisLabels="@_xAxisLabels" Width="100%">
+                        </MudChart>
                     }
                     else
                     {
