:zip: local data.

--- a/Friday.ERP.Client/Pages/CustomerVendorManagement/Dialogs/CustomerVendorCreateDialog.razor
+++ b/Friday.ERP.Client/Pages/CustomerVendorManagement/Dialogs/CustomerVendorCreateDialog.razor
@@ -1,5 +1,5 @@
 ﻿@using Friday.ERP.Client.Data
-@using Friday.ERP.Shared.DataTransferObjects
+@using Friday.ERP.Client.Data.DataTransferObjects
 @inject IHttpRepository HttpRepo
 
 <MudDialog>
