--- a/Friday.ERP.Client/Pages/Dashboard/Index.razor
+++ b/Friday.ERP.Client/Pages/Dashboard/Index.razor
@@ -1,8 +1,8 @@
 ﻿@page "/"
-@using Friday.ERP.Shared.DataTransferObjects
-@using Friday.ERP.Client.Data
+@using Friday.ERP.Client.Data.DataTransferObjects
 @using Friday.ERP.Client.Pages.Dashboard.Components.Molecules
 @using Friday.ERP.Client.Pages.Dashboard.Components.Templates
+@using Friday.ERP.Client.Data
 
 @inject IHttpRepository HttpRepo
 
