--- a/Friday.ERP.Client/Pages/Inventory/Index.razor
+++ b/Friday.ERP.Client/Pages/Inventory/Index.razor
@@ -1,9 +1,9 @@
 ﻿@page "/inventory"
-@using Friday.ERP.Shared.DataTransferObjects
-@using Friday.ERP.Client.Data
+@using Friday.ERP.Client.Data.DataTransferObjects
 @using Friday.ERP.Client.Pages.Inventory.Components.Moledules
 @using Friday.ERP.Client.Pages.Inventory.Dialogs
 @using Friday.ERP.Client.Pages.Sale.Components.Templates
+@using Friday.ERP.Client.Data
 
 @inject IHttpRepository HttpRepo
 @inject IDialogService DialogService
