--- a/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseTransactionDialog.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseTransactionDialog.razor
@@ -1,5 +1,5 @@
-@using Friday.ERP.Shared.Enums
-@using Friday.ERP.Shared.DataTransferObjects
+@using Friday.ERP.Client.Data.Enums
+@using Friday.ERP.Client.Data.DataTransferObjects
 <MudDialog>
     <DialogContent>
         <MudGrid Spacing="2">
