--- a/Friday.ERP.Client/Pages/Purchase/Index.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Index.razor
@@ -1,8 +1,8 @@
 ﻿@page "/purchase"
-@using Friday.ERP.Shared.DataTransferObjects
-@using Friday.ERP.Client.Data
+@using Friday.ERP.Client.Data.DataTransferObjects
 @using Friday.ERP.Client.Pages.Purchase.Dialogs
 @using Friday.ERP.Client.Pages.Sale.Components.Templates
+@using Friday.ERP.Client.Data
 
 @inject NavigationManager NavManager
 @inject IHttpRepository HttpRepo
