--- a/Friday.ERP.Client/Pages/Sale/Dialogs/SaleProductCartDialog.razor
+++ b/Friday.ERP.Client/Pages/Sale/Dialogs/SaleProductCartDialog.razor
@@ -1,6 +1,6 @@
-@using Friday.ERP.Shared.DataTransferObjects
-@using Friday.ERP.Client.Data
+@using Friday.ERP.Client.Data.DataTransferObjects
 @using Friday.ERP.Client.Pages.Sale.Dialogs.Components.Molecules
+@using Friday.ERP.Client.Data
 @inject IHttpRepository HttpRepo
 @inject ISnackbar Snackbar
 
