--- a/Friday.ERP.Client/Pages/Sale/Dialogs/SaleTransactionDeliveryDialog.razor
+++ b/Friday.ERP.Client/Pages/Sale/Dialogs/SaleTransactionDeliveryDialog.razor
@@ -1,4 +1,4 @@
-﻿@using Friday.ERP.Shared.DataTransferObjects
+﻿@using Friday.ERP.Client.Data.DataTransferObjects
 <MudDialog>
     <DialogContent>
         <MudForm @ref="_form" @bind-IsValid="@_success" @bind-Errors="@_errors">
