--- a/Friday.ERP.Client/Pages/Settings/Index.razor
+++ b/Friday.ERP.Client/Pages/Settings/Index.razor
@@ -1,5 +1,5 @@
 @page "/Settings"
-@using Friday.ERP.Shared.DataTransferObjects
+@using Friday.ERP.Client.Data.DataTransferObjects
 @using Friday.ERP.Client.Data
 
 @inject IHttpRepository HttpRepo
