--- a/Friday.ERP.Client/Shared/NotificationBox.razor
+++ b/Friday.ERP.Client/Shared/NotificationBox.razor
@@ -1,4 +1,4 @@
-@using Friday.ERP.Shared.DataTransferObjects
+@using Friday.ERP.Client.Data.DataTransferObjects
 @using Friday.ERP.Client.Data
 @inject IHttpRepository HttpRepo
 
