--- a/Friday.ERP.Client/Pages/Invoice/Index.razor
+++ b/Friday.ERP.Client/Pages/Invoice/Index.razor
@@ -1,9 +1,9 @@
 @page "/invoice"
-@using Friday.ERP.Shared.DataTransferObjects
-@using Friday.ERP.Client.Data
+@using Friday.ERP.Client.Data.DataTransferObjects
 @using Friday.ERP.Client.Pages.Invoice.Dialogs
 @using Friday.ERP.Client.Pages.Sale.Components.Templates
 @using Friday.ERP.Client.Pages.UserManagement.Components
+@using Friday.ERP.Client.Data
 
 @inject IHttpRepository HttpRepo
 @inject IDialogService DialogService
