--- a/Friday.ERP.Client/Pages/Login/Index.razor
+++ b/Friday.ERP.Client/Pages/Login/Index.razor
@@ -1,7 +1,7 @@
 @page "/login"
 @using Friday.ERP.Client.Data
+@using Friday.ERP.Client.Data.DataTransferObjects
 @using System.Text
-@using Friday.ERP.Shared.DataTransferObjects
 
 @inject IHttpRepository HttpRepo
 @inject ISnackbar Snackbar
