--- a/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseProductCartDialog.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseProductCartDialog.razor
@@ -1,6 +1,6 @@
 @using Friday.ERP.Client.Data
+@using Friday.ERP.Client.Data.DataTransferObjects
 @using Friday.ERP.Client.Pages.Sale.Dialogs.Components.Molecules
-@using Friday.ERP.Shared.DataTransferObjects
 @inject IHttpRepository HttpRepo
 @inject ISnackbar Snackbar
 
