--- a/Friday.ERP.Client/Pages/Sale/Index.razor
+++ b/Friday.ERP.Client/Pages/Sale/Index.razor
@@ -1,8 +1,8 @@
 ﻿@page "/sale"
-@using Friday.ERP.Shared.DataTransferObjects
-@using Friday.ERP.Client.Data
+@using Friday.ERP.Client.Data.DataTransferObjects
 @using Friday.ERP.Client.Pages.Sale.Components.Templates
 @using Friday.ERP.Client.Pages.Sale.Dialogs
+@using Friday.ERP.Client.Data
 
 @inject NavigationManager NavManager
 @inject IHttpRepository HttpRepo
