--- a/Friday.ERP.Client/Pages/UserManagement/Index.razor
+++ b/Friday.ERP.Client/Pages/UserManagement/Index.razor
@@ -1,9 +1,9 @@
 ﻿@page "/user-management"
-@using Friday.ERP.Shared.DataTransferObjects
-@using Friday.ERP.Shared.RequestFeatures
-@using Friday.ERP.Client.Data
+@using Friday.ERP.Client.Data.DataTransferObjects
+@using Friday.ERP.Client.Data.RequestFeatures
 @using Friday.ERP.Client.Pages.UserManagement.Components
 @using Friday.ERP.Client.Pages.UserManagement.Dialogs
+@using Friday.ERP.Client.Data
 
 @inject IHttpRepository HttpRepo
 @inject IDialogService DialogService
