--- a/Friday.ERP.Client/Shared/MainLayout.razor
+++ b/Friday.ERP.Client/Shared/MainLayout.razor
@@ -2,10 +2,9 @@
 @inject IConfiguration Configuration
 @inject AuthenticationStateProvider AuthProvider
 @inject ISnackbar Snackbar
-
 @using Microsoft.AspNetCore.SignalR.Client
 @using Newtonsoft.Json
-@using Friday.ERP.Shared.DataTransferObjects
+@using Friday.ERP.Client.Data.DataTransferObjects
 @using Friday.ERP.Client.Data
 @inherits LayoutComponentBase
 
