--- a/Friday.ERP.Client/Pages/Purchase/Index.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Index.razor
@@ -31,6 +31,7 @@
                         <MudAutocomplete T="string?"
                                          @ref="CategoryAutoComplete"
                                          Clearable="true"
+                                         ResetValueOnEmptyText="true"
                                          Variant="Variant.Outlined"
                                          Margin="Margin.Dense"
                                          Dense="true"
@@ -125,6 +126,7 @@
                             <MudAutocomplete T="string?"
                                              @ref="CustomerVendorAutoComplete"
                                              Clearable="true"
+                                             ResetValueOnEmptyText="true"
                                              Variant="Variant.Outlined"
                                              Margin="Margin.Dense"
                                              Required="true"
