--- a/Friday.ERP.Client/App.razor
+++ b/Friday.ERP.Client/App.razor
@@ -1,4 +1,5 @@
 ﻿@using Friday.ERP.Client.Utilities
+@using Friday.ERP.Client.Shared.Layouts
 @inject HttpInterceptorService Interceptor
 
 <Router AppAssembly="@typeof(App).Assembly">
