--- a/Friday.ERP.Client/Pages/Login/Index.razor
+++ b/Friday.ERP.Client/Pages/Login/Index.razor
@@ -2,6 +2,7 @@
 @using Friday.ERP.Client.Data
 @using Friday.ERP.Client.Data.DataTransferObjects
 @using System.Text
+@using Friday.ERP.Client.Shared.Layouts
 
 @inject IHttpRepository HttpRepo
 @inject ISnackbar Snackbar
