--- a/Friday.ERP.Client/Pages/Sale/Index.razor
+++ b/Friday.ERP.Client/Pages/Sale/Index.razor
@@ -3,6 +3,7 @@
 @using Friday.ERP.Client.Pages.Sale.Components.Templates
 @using Friday.ERP.Client.Pages.Sale.Dialogs
 @using Friday.ERP.Client.Data
+@using Friday.ERP.Client.Shared.Layouts
 
 @inject NavigationManager NavManager
 @inject IHttpRepository HttpRepo
