--- a/Friday.ERP.Client/Pages/Settings/Index.razor
+++ b/Friday.ERP.Client/Pages/Settings/Index.razor
@@ -1,6 +1,7 @@
 @page "/Settings"
 @using Friday.ERP.Client.Data.DataTransferObjects
 @using Friday.ERP.Client.Data
+@using Friday.ERP.Client.Shared.Layouts
 
 @inject IHttpRepository HttpRepo
 @inject ISnackbar Snackbar
