--- a/Friday.ERP.Client/Shared/Layouts/MainLayout.razor
+++ b/Friday.ERP.Client/Shared/Layouts/MainLayout.razor
@@ -6,6 +6,7 @@
 @using Newtonsoft.Json
 @using Friday.ERP.Client.Data.DataTransferObjects
 @using Friday.ERP.Client.Data
+@using Friday.ERP.Client.Shared.Layouts.MainComponents
 @inherits LayoutComponentBase
 
 <MudThemeProvider/>
