--- a/Friday.ERP.Client/Pages/Dashboard/Index.razor
+++ b/Friday.ERP.Client/Pages/Dashboard/Index.razor
@@ -3,6 +3,7 @@
 @using Friday.ERP.Client.Pages.Dashboard.Components.Molecules
 @using Friday.ERP.Client.Pages.Dashboard.Components.Templates
 @using Friday.ERP.Client.Data
+@using Friday.ERP.Client.Shared.Layouts
 
 @inject IHttpRepository HttpRepo
 
